--- a/src/CSS/Footer.css
+++ b/src/CSS/Footer.css
@@ -1,6 +1,6 @@
 .footer-main{
     background-color: #323232;
-    min-height: 15vh;
+    min-height: 20vh;
     width: 100%;
   
 }
